[gd_scene load_steps=5 format=3 uid="uid://cwkktrapr0nfm"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_rofpr"]
[ext_resource type="FontFile" uid="uid://cx1m2pgcbcdye" path="res://assets/fonts/Kenney Pixel Square.ttf" id="2_ulb8j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6as65"]
bg_color = Color(0.540221, 0.578295, 0.92548, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_v5kdu"]
font = ExtResource("2_ulb8j")
font_size = 20
outline_size = 3
outline_color = Color(1, 0.0117647, 1, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 0.643137)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rofpr")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.5
offset_top = -95.5
offset_right = 152.5
offset_bottom = 95.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6as65")

[node name="Score" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -83.0
offset_right = 73.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 2
text = "SCORE: 9999"
label_settings = SubResource("LabelSettings_v5kdu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -41.0
offset_right = 55.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_pressed_color = Color(1, 0.694703, 0.923923, 1)
theme_override_fonts/font = ExtResource("2_ulb8j")
text = "RESUME"

[node name="Reset" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = 2.0
offset_right = 55.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_pressed_color = Color(1, 0.694703, 0.923923, 1)
theme_override_fonts/font = ExtResource("2_ulb8j")
text = "RESET"

[node name="Quit" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = 45.0
offset_right = 55.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_pressed_color = Color(1, 0.694703, 0.923923, 1)
theme_override_fonts/font = ExtResource("2_ulb8j")
text = "QUIT"

[connection signal="pressed" from="Panel/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Panel/Quit" to="." method="_on_quit_pressed"]
